<resources>
    <!--Домашние и классные задания-->
    <string name="home1">Home work 1</string>
    <string name="home2">Home work 2</string>
    <string name="home3">Home work 3</string>
    <string name="home4">Home work 4</string>
    <string name="home5">Home work 5</string>
    <string name="home6">Home work 6</string>
    <string name="home7">Home work 7</string>
    <string name="home9">Home work 9</string>
    <string name="home10">Home work 10</string>
    <string name="home11">Home work 11</string>

    <string name="class1">Class work 1</string>
    <string name="class2">Class work 2</string>
    <string name="class3">Class work 3</string>
    <string name="class4">Class work 4</string>
    <string name="class5">Class work 5</string>
    <string name="class6">Class work 6</string>
    <string name="class7">Class work 7</string>
    <string name="class8">Class work 8</string>
    <string name="class9">Class work 9</string>
    <string name="class10">Class work 10</string>


    <!--Общие данные-->
    <string name="app_name">Android Course in PVT</string>
    <string name="some_text_1">Пример какого-то текста.</string>
    <string name="some_text_2">Пример какого-то странного текста</string>
    <string name="start">Действовать!</string>
    <string name="work">Work!</string>
    <string name="button">Кнопка</string>
    <string name="link">Ссылка</string>
    <string name="download">Загрузить!</string>

    <!--Class work 02 -->
    <string name="name">Name</string>
    <string name="login">Login</string>

    <!--Домашняя работа 2 - Countries names -->
    <string name="austria">Австрия</string>
    <string name="poland">Польша</string>
    <string name="italy">Италия</string>
    <string name="columbia">Колумбия</string>
    <string name="madagaskar">Мадагаскар</string>
    <string name="tailand">Таиладн</string>
    <string name="denmark">Дания</string>

    <!--Домашняя работа 3 -->
    <string name="beer">Пиво</string>
    <string name="vodka">Водка</string>
    <string name="wiskey">Виски</string>

</resources>
