<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.umbra.allApps.HW01.Activity_HomeWork01">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_no1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/some_text_1" />

            <TextView
                android:id="@+id/text_no2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/some_text_2" />
        </LinearLayout>

        <!--Третий способ для обработки нажатия кнопики -->
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="replaceText"
            android:text="@string/start" />

        <Button
            android:id="@+id/buttonReplaceAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
