<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/country1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/austria" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/red">

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/white">

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/red">

                    </FrameLayout>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/country2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/poland" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/white">

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/red">

                    </FrameLayout>

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/country3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/italy" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight="4"
                        android:background="@color/white">

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight="4"
                        android:background="@color/red">

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight="4"
                        android:background="@color/green">

                    </FrameLayout>

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/country4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/columbia" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/yellow">

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/blue">

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/red">

                    </FrameLayout>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/country5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/madagaskar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="50dp"
                        android:layout_height="100dp"
                        android:layout_weight="30"
                        android:background="@color/white"
                        android:orientation="vertical">

                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_weight="70"
                        android:orientation="vertical">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@color/red">

                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@color/green">

                        </FrameLayout>
                    </LinearLayout>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/country6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/tailand" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="15"
                        android:background="@color/red">

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="15"
                        android:background="@color/white">

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="40"
                        android:background="@color/blue">

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="15"
                        android:background="@color/white">

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="15"
                        android:background="@color/red">

                    </FrameLayout>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/country7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/denmark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/denmark1"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:elevation="0dp"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:background="@color/red">

                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:background="@color/white">

                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:background="@color/red">

                        </FrameLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/denmark2"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/white">

                        </FrameLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/denmark3"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:elevation="0dp"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:background="@color/red">

                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:background="@color/white">

                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:background="@color/red">

                        </FrameLayout>

                    </LinearLayout>

                </LinearLayout>

            </TableRow>
        </TableLayout>

    </LinearLayout>
</ScrollView>